--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,3 @@
-.firstHeader {
-    color: red;
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 50px;
-}
-
-.pageLinks {
-    display: inline-block;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
-    padding: 5px;
-}
-
-.headerLinks {
-    text-align: right;
-}
-
-.inputBox {
-    display: block;
-    text-align: right;
-    margin: auto;
-    list-style-type: none;
-    width: 250px;
-    padding-bottom: 10px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 header {
     background-color: aquamarine;
 }
@@ -38,17 +9,88 @@ footer {
 body {
     background-color: aqua;
 }
-
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+main {
+    background-color: rgb(118, 218, 218);
 }
 
-figcaption {
+hr {
+    height: 5px;
+    color: black;
+    background-color: black;
+    opacity: 0.6;
+    margin: 10px 0px 10px 0px;
+}
+
+h1 {
+    color: red;
+    margin: auto;
     text-align: center;
-    padding-top: 10px;
-    font-weight: bolder;
-    font-size: larger;
+    padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 50px;
+}
+
+h2 {
+    color: red;
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+}
+
+h3 {
+    color: red;
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+}
+
+/* .about-me {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+} */
+
+.about-me img{
+    /* Original image size is 270x270 */
+    max-width: 200px;
+    max-height: 200px;
+    display: block;
+    position: relative;
+    float: left;
+    margin: 0px 50px 0px 50px;
+}
+
+.about-me p {
+    display: block;
+    font-size: 26px;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+.page-links {
+    background-color: beige;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+}
+
+.projects {
+    display: block;
+    margin-top: 50px;
+}
+
+.input-box {
+    display: block;
+    text-align: right;
+    margin: auto;
+    list-style-type: none;
+    width: 250px;
+    padding-bottom: 10px;
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
