--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,24 @@
+:root {
+    --heading-colour: red;
+    --nav-colour: beige;
+}
+
+@media screen and (max-width: 992px) {
+    body {
+        width: 50%;
+    }
+    
+    .page-links {
+        list-style-type: ;
+    }
+}
+
+@media screen and (min-width: 993px) {
+    body {
+        width: 100%;
+    }
+}
+
 header {
     background-color: aquamarine;
 }
@@ -18,50 +39,54 @@ hr {
     color: black;
     background-color: black;
     opacity: 0.6;
-    margin: 10px 0px 10px 0px;
+    margin: 0px 0px 10px 0px;
+}
+
+h1, h2, h3, h4 {
+    color: var(--heading-colour);
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h1 {
-    color: red;
-    margin: auto;
-    text-align: center;
-    padding: 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 h2 {
-    color: red;
-    margin: auto;
-    text-align: center;
-    padding: 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 30px;
+    font-size: 50px;
+    border-bottom: 3px solid var(--heading-colour);
+    width: 45%;
 }
 
 h3 {
-    color: red;
-    margin: auto;
-    text-align: center;
-    padding: 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+}
+
+h4 {
     font-size: 20px;
 }
 
-/* .about-me {
+/* Navigation bar */
+.page-links {
+    background-color: var(--nav-colour);
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-} */
+    justify-content: space-evenly;
+    list-style-type: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+}
 
+/* About Me */
 .about-me img{
     /* Original image size is 270x270 */
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 220px;
+    max-height: 220px;
     display: block;
     position: relative;
     float: left;
-    margin: 0px 50px 0px 50px;
+    margin: 15px 50px 0px 30px;
 }
 
 .about-me p {
@@ -70,18 +95,54 @@ h3 {
     font-family: Arial, Helvetica, sans-serif
 }
 
-.page-links {
-    background-color: beige;
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 28px;
+ /* Projects */
+
+ .projects {
+    display: block;
 }
 
-.projects {
+.first-project {
+    position: relative;
+    width: 450px;
+}
+
+.quiz-image {
+    max-width: 450px;
+    max-height: 450px;
     display: block;
-    margin-top: 50px;
+}
+
+.quiz-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.493);
+    color: blue;
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: 0.5s;
+    border-radius: 44px;
+}
+
+.quiz-overlay:hover {
+    opacity: 1;
+}
+
+.quiz-desc{
+    font-size: 20px;
+    margin: 10px;
+}
+
+/* Contact */
+
+.contact-me h2 {
+    margin-bottom: 15px;
 }
 
 .input-box {
