--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     --nav-colour: beige;
 }
 
+ /* Media query for different screen sizes*/
 @media screen and (max-width: 992px) {
     .projects-container {
         width: 50%;
@@ -20,13 +21,28 @@
         align-content: center;
     }
 
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-me p {
+        display: inline-block;
+        text-align: justify;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .about-me img {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 50;
+        width: 50%;
     }
 }
+
+/* Global values*/
 
 html {
     scroll-behavior: smooth;
@@ -196,6 +212,12 @@ h4 {
 
 .contact-me h2 {
     margin-bottom: 15px;
+}
+
+.contact-me p {
+    display: block;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .input-box {
